
2.09    UNRELEASED
        - added "logfile" flag for bbtester. If not in --fg mode with --stdout
          set and --logfile is set, we'll write to a file in
          "workdir/bbtester.log". This is to help in situations where the
          tester is hanging in 'start' mode, but not in --fg mode. Without this
          flag, no logging info is displayed or returned (closes #149)

2.08    2016-06-23
        - changed from using HOMEPATH env var to USERPROFILE on Windows, as the
          former didn't contain the drive letter (fixes #96)
        - legacy perls were not being excluded when legacy was disabled
          (fixes #137)
        - changed all links to dnmfarrell berrybrew repo to stevieb9 (closes
          #136)
        - removed notices about MSWin PATH issues, as they were completely
          rectified in berrybrew after it's "off" feature was added
        - several POD corrections
        - confirmed that all tests still pass after berrybrew version
          sb-20160602 changes (ensured PATH is still ok)
        - fixed a couple of tests that had the perl ver hard-coded, and another
          two that were trying to use a regex in is()

2.06    2016-06-12
        - no functional changes
        - BBDEV_TESTING tests now require a version (eg: 5.24.0) set in
          $ENV{PERLVER}, instead of having 5.22.1 hardcoded for a few test
          files, and other tests don't use the ver anymore (closes #132)
        - tests now reside in sub-directories, cleaning the t/ directory up
          significantly (closes #133)
        - fixed config file doc link in BrewBuild's POD (closes #131)
        - new berrybrew build, in prep for using --on on Windows
          (https://github.com/stevieb9/berrybrew ver: sb-20160601)

2.05    2016-05-06
        - added [brewbuild] section to config file (closes #128)
        - cleaned up test logic due to failing MSWin tests
        - switched from CPAN::ReverseDependencies to MetaCPAN::Client, as the